--- a/spring-cloud-sample/spring-cloud-B/pom.xml
+++ b/spring-cloud-sample/spring-cloud-B/pom.xml
@@ -2,20 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.9</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
     <groupId>com.alibaba.cloud.sample</groupId>
     <artifactId>spring-cloud-B</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-cloud-B</name>
     <description>spring-cloud-B</description>
     <properties>
-        <spring-cloud-alibaba.version>2022.0.0.0-security-SNAPSHOT</spring-cloud-alibaba.version>
-        <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
+        <spring-cloud.version>2021.0.5</spring-cloud.version>
+        <spring-boot.version>2.6.13</spring-boot.version>
         <java.version>17</java.version>
     </properties>
     <dependencies>
@@ -35,11 +30,6 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-alibaba-starter-security</artifactId>
-            <version>2022.0.0.0-security-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-xds</artifactId>
@@ -65,6 +55,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
