--- a/spring-cloud-sample/spring-cloud-B/pom.xml
+++ b/spring-cloud-sample/spring-cloud-B/pom.xml
@@ -12,6 +12,8 @@
         <spring-cloud.version>2021.0.5</spring-cloud.version>
         <spring-boot.version>2.6.13</spring-boot.version>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source> <!-- Use Java 7 or later -->
+        <maven.compiler.target>17</maven.compiler.target> <!-- Use Java 7 or later -->
     </properties>
     <dependencies>
         <dependency>
@@ -33,17 +35,17 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-xds</artifactId>
-            <version>2.0.0-alpha3-SNAPSHOT</version>
+            <version>2.0.0-alpha2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-security-core</artifactId>
-            <version>2.0.0-alpha3-SNAPSHOT</version>
+            <version>2.0.0-alpha2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-core</artifactId>
-            <version>2.0.0-alpha3-SNAPSHOT</version>
+            <version>2.0.0-alpha2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -84,8 +86,41 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>17</release>
+                    <fork>true</fork>
+                    <verbose>true</verbose>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>snapshots</id>
+            <name>Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
