change nacos address

--- a/spring-cloud-sample/spring-cloud-B/src/main/resources/application.yml
+++ b/spring-cloud-sample/spring-cloud-B/src/main/resources/application.yml
@@ -9,4 +9,4 @@ spring:
   cloud:
     nacos:
       discovery: #启用 spring cloud nacos discovery
-        server-addr: localhost:8848
+        server-addr: mse-5e117630-nacos-ans.mse.aliyuncs.com
