--- a/spring-cloud-sample/pom.xml
+++ b/spring-cloud-sample/pom.xml
@@ -14,6 +14,6 @@
     <modules>
         <module>spring-cloud-A</module>
         <module>spring-cloud-B</module>
-        <module>spring-gateway</module>
+        <module>spring-cloud-C</module>
     </modules>
 </project>
