--- a/spring-cloud-sample/spring-cloud-C/src/main/resources/application.yml
+++ b/spring-cloud-sample/spring-cloud-C/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 18000
+  port: 18003
 
 spring:
   application:
-    name: service-a #项目名称必填，在注册中心唯一；最好和之前域名保持一致，第四步会讲到原因
+    name: service-c #项目名称必填，在注册中心唯一；最好和之前域名保持一致，第四步会讲到原因
   cloud:
     nacos:
       discovery: #启用 spring cloud nacos discovery
